
2019-01-04  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (get_reserved_words_with_amendments): if a user reserves a
	  default reserved word, context-sensitivity is now preserved only if
	  they specify it.

2018-12-31  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c, tree.h, codegen.c, cobc.h: use EXTFH call per program,
	  not globally
	* pplex.l, ppparse.y, scanner.l, codegen.c: implement CALLFH
	  directive (Micro Focus)
	* reserved.c: fixed redefinition warning
	* scanner.l (#LINE): removed unneeded temporary string duplication
	* scanner.l (scan_x): minor refactoring and fixing compiler warning

2018-12-29  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_inspect): moved duplicate ref-mod size calculation to
	  (calc_reference_size) and fixed it to never skip the specified length

2018-12-29  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c: replaced the array reserved_words and the list
	  amendment_list with hashmaps (see FR #295).

2018-12-28  Edward Hart <edward.dan.hart@gmail.com>

	* codegen.c: fixed heap overflow by using strncmp instead of memcmp
	* parser.y (split_key): fixed memory leak

2018-12-28  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: fixed bug #564 by allowing INSPECT CONVERTING FROM/TO
	  alphabet names and removed functions from the possible list

2018-12-04  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y: finishing FR #244 missing-statement by allowing
	  WHEN expression  with missing imperative statement (= directly
	  followed by END-EVALUATE or a separator period)

2018-11-26  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c: fix listing issues when source is suppressed like printed
	  headers without data and missing output of errors
	* flag.def: renamed new listing options according to NEWS and docs
	* parser.y: msgid change "runtime elements" instead of unclear "sources"

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_tree_category): correct category for reference-modified